target/debug/build/anyhow-4b27ec6b78487390/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/user/proj/rust-stat/stat/target/debug/build/anyhow-4b27ec6b78487390/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
